add folders and update readme

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Estudando git</h1>
     <p>Estou estudando git e github</p>
+    <p>Mais uma alteração foi feita!</p>
 </body>
 </html>
