--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Estudando git</h1>
+    <p>Estou estudando git e github</p>
+    <p>Mais uma alteração foi feita!</p>
 </body>
 </html>
