--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Estudando git</h1>
     <p>Estou estudando git e github</p>
     <p>Mais uma alteração foi feita!</p>
+    <p>git clone</p>
 </body>
 </html>
